# phonesis

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  logging.conf  pyproject.toml  requirements.txt
samples/: en_phsis_built.json  fr_phsis_built.json
samples/en/: alphabet.json
samples/fr/: alphabet.json
src/phonesis/: constants.py  fs.py  impl.py  main.py  train.py
src/phonesis/utils/: pgit.py
src/scilab/: exceptions.py  fs.py  main.py
tests/: test_quick.py
