[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scilab"
version = "0.1.0"
description = " Multi-language tokenization algorithm using the syllables of word pronunciation in each language."
readme = "README.md"
authors = [
    { name = "Dr Mokira", email = "dr.mokira@gmail.com" },
]
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
keywords = ["nlp", "sub-words-tokenization"]
dependencies = [
]

[project.urls]
"Homepage" = "https://github.com/mokira3d48/scilab"
#"Bug Tracker" = "https://github.com/your-username/my-python-package/issues"

[tool.setuptools.packages.find]
where = ["src"]

#[project.scripts]
#mycmd = "package_name.__main__:main"

