[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "phonesis"
version = "0.1.0"
description = "Multilingual tokenization algorithm using the pronunciation phonemes of words. It adjusts its tokenization codex directly from words in the language dictionary, rather than from large text corpora."
readme = "README.md"
authors = [
    { name = "Doctor Mokira", email = "dr.mokira@gmail.com" },
]
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
keywords = [
    "nlp", "sub-words-tokenization", "phonetic-conversion",
    "phonetic-languages", "sub-words-tokenization"
]
dependencies = [
]

[project.urls]
"Homepage" = "https://github.com/mokira3d48/phonesis"
#"Bug Tracker" = "https://github.com/your-username/my-python-package/issues"

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
phonesis-train = "phonesis.main:train"
